Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
Description
Rare sporadic failures in:
ha_tests.RecoveryTests.test_expected_backup_timeout
AssertionError: 'recovering' != 'active
ha_tests.LongTests.test_failover_send_receive
AssertionError: Broker<006:cluster1-1.log qpidd-26 :44493> expected='ready', actual='catchup'
To reproduce you need to run ha_tests.py in a loop overnight or longer.
See also: https://bugzilla.redhat.com/show_bug.cgi?id=969039