QPID-4944: HA Sporadic failure in ha_tests: tes_failover_send_receive and test_expected_backup_timeout

Very sporadic failures so difficult to verify the fix.

- Simplified Membership, centralized status change, make it atomic.
- Fix test bug in test_expected_backup_timeout: not waiting on final status check, race.
- Remove out-of-date status info from log prefixes:  Guard, ReplicatingSubscription

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1495466 13f79535-47bb-0310-9956-ffa450edef68